client: Add ember-exam for much faster testing

--- a/scripts/travis/install
+++ b/scripts/travis/install
@@ -11,6 +11,7 @@ install_client_deps() {
   (
     cd client
     travis_retry npm install -g bower
+    travis_retry npm install phantomjs-prebuilt
     travis_retry npm install
     travis_retry bower install
   )
